# advent-of-code-2022

./: .tool-versions  Cargo.toml  README.md
.scaffold/day/: cookiecutter.json
.scaffold/day/day_{{cookiecutter.day_num}}/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
day_01/: Cargo.toml
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: Cargo.toml
day_03/src/: main.rs
day_04/: Cargo.toml
day_04/src/: main.rs
day_05/: Cargo.toml
day_05/src/: main.rs
day_06/: Cargo.toml
day_06/src/: main.rs
day_07/: Cargo.toml
day_07/src/: main.rs
day_08/: Cargo.toml
day_08/src/: main.rs
day_09/: Cargo.toml
day_09/src/: main.rs
day_10/: Cargo.toml
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
day_12/: Cargo.toml
day_12/src/: main.rs
day_13/: Cargo.toml
day_13/src/: main.rs
day_14/: Cargo.toml
day_14/src/: main.rs
day_15/: Cargo.toml
day_15/src/: main.rs
day_16/: Cargo.toml
day_16/src/: main.rs
day_17/: Cargo.toml
day_17/src/: main.rs
day_18/: Cargo.toml
day_18/src/: main.rs
day_19/: Cargo.toml
day_19/src/: main.rs
day_20/: Cargo.toml
day_20/src/: main.rs
day_21/: Cargo.toml
day_21/src/: main.rs
