[workspace]

members = [
  "common",
  "day_01",
  "day_02",
  "day_03",
  "day_04",
  "day_05",
  "day_06",
  "day_07",
  "day_08",
  "day_09",
  "day_10",
  "day_11",
  "day_12",
  "day_13",
  "day_14",
  "day_15",
  "day_16",
  "day_17",
  "day_18",
  "day_19",
  "day_20",
]

[workspace.dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.0"
