[package]
name = "day_19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
lazy_static = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
